Modularize AcmeAir (#2)
* Modularize acmeair - first pass.

* Add documentation for modularity.

* Documentation updates.

* Cleanup tab/spaces.